--- a/src/pages/Cardapio/Items/Item/Item.module.scss
+++ b/src/pages/Cardapio/Items/Item/Item.module.scss
@@ -40,7 +40,7 @@ $veganos: #80aa40;
       margin-bottom: 20px;
     }
     p {
-      color: $dark-gray;
+      color: $dark-grey;
       font-size: 1.3rem;
       font-weight: 600;
       max-width: 600px;
